[gd_scene load_steps=6 format=3 uid="uid://c0uvgi5rk3egr"]

[ext_resource type="Texture2D" uid="uid://27y3lah2xcp1" path="res://textures/Mavromonte_simmetrico.png" id="1_con2f"]
[ext_resource type="Theme" uid="uid://d2bwcbyldukri" path="res://themes/tema_griglie.tres" id="2_mhnvy"]
[ext_resource type="Theme" uid="uid://cobum0ciwvcn5" path="res://themes/tema_pulsanti.tres" id="3_4ytvr"]
[ext_resource type="Script" uid="uid://b4avk8674opj" path="res://scripts/pulsante_master.gd" id="4_mhnvy"]
[ext_resource type="Script" uid="uid://88cpbjlqpl6q" path="res://scripts/pulsante_giocatore.gd" id="5_4ytvr"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sfondo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(720, 720)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_con2f")
expand_mode = 1
stretch_mode = 5

[node name="Pulsanti" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -86.0
offset_right = 93.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mhnvy")

[node name="Master" type="Button" parent="Pulsanti"]
layout_mode = 2
theme = ExtResource("3_4ytvr")
text = "Master"
script = ExtResource("4_mhnvy")

[node name="Giocatore" type="Button" parent="Pulsanti"]
layout_mode = 2
theme = ExtResource("3_4ytvr")
text = "Giocatore"
script = ExtResource("5_4ytvr")

[connection signal="mouse_entered" from="Pulsanti/Master" to="Pulsanti/Master" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Pulsanti/Master" to="Pulsanti/Master" method="_on_mouse_exited"]
[connection signal="pressed" from="Pulsanti/Master" to="Pulsanti/Master" method="_on_pressed"]
[connection signal="mouse_entered" from="Pulsanti/Giocatore" to="Pulsanti/Giocatore" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Pulsanti/Giocatore" to="Pulsanti/Giocatore" method="_on_mouse_exited"]
[connection signal="pressed" from="Pulsanti/Giocatore" to="Pulsanti/Giocatore" method="_on_pressed"]
